<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent" android:layout_height="fill_parent"  
    android:orientation="vertical">
    
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:id="@+id/item_detail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ItemDetailFragment" />
 
 <EditText
    android:id="@+id/player_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/player_name"
    android:inputType="textNoSuggestions" />
 
  <EditText
    android:id="@+id/number"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/number"
    android:inputType="number" />
  
 <EditText
    android:id="@+id/team_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/team_name"
    android:inputType="none" />
  
   <Button xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_button"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     tools:context=".ItemDetailFragment" />
  
</LinearLayout>